# autoware.privately-owned-vehicles

./: .gitignore
DomainSeg/create_masks/Mapillary_Vistas_2.0/: README.md  process_mapillary_vistas.py
DomainSeg/create_masks/ROADWork/: README.md
DomainSeg/create_masks/RoadWork/: README.md
EgoPath/create_path/CULane/: README.md  parse_culane_bev.py  process_culane.py
EgoPath/create_path/CurveLanes/: parse_curvelanes_bev.py
EgoPath/create_path/TuSimple/: parse_tusimple_bev.py
Models/: README.md  requirements.txt
Models/data_utils/: augmentations.py  load_data_auto_steer.py  load_ego_space.py
Models/exports/: README.md
Models/inference/: README.md  ego_space_infer.py
Models/model_components/: auto_steer_head.py  auto_steer_network.py  bev_feature_fusion.py  bev_path_context.py  bev_path_neck.py  ego_lanes_head.py  ego_path_head.py
Models/training/: auto_steer_trainer.py  ego_space_trainer.py  train_auto_steer.py  train_ego_space.py
Models/visualizations/: README.md
Models/visualizations/DomainSeg/: image_visualization.py  video_visualization.py
Models/visualizations/EgoSpace/: image_visualization.py  video_visualization.py
Models/visualizations/SceneSeg/: image_visualization.py  video_visualization.py
SafetyShield/: README.md
SafetyShield/output/: vehicle_to_pixel_la.npy
SafetyShield/output/test_output/: error_individual_files_validation_segment-10203656353524179475_7625_000_7645_000_with_camera_labels.tfrecord.npz  error_individual_files_validation_segment-1024360143612057520_3580_000_3600_000_with_camera_labels.tfrecord.npz  error_individual_files_validation_segment-10247954040621004675_2180_000_2200_000_with_camera_labels.tfrecord.npz  error_individual_files_validation_segment-10335539493577748957_1372_870_1392_870_with_camera_labels.tfrecord.npz  error_individual_files_validation_segment-10689101165701914459_2072_300_2092_300_with_camera_labels.tfrecord.npz
SafetyShield/scripts/: compute_homography.py  main.py  plot_error.py  utils.py
Scene3D/: requirements.txt
Simulation/CARLA/ROS2/config/: AutoSteer.rviz  PathFinder.rviz
Simulation/CARLA/ROS2/src/autosteer_simulator/: package.xml  setup.cfg  setup.py
Simulation/CARLA/ROS2/src/autosteer_simulator/autosteer_simulator/: autosteer_simulator_node.py
Simulation/CARLA/ROS2/src/road_shape_publisher/: README.md  package.xml  setup.cfg  setup.py
Simulation/CARLA/ROS2/src/road_shape_publisher/road_shape_publisher/: road_shape_publisher_node.py
VisionPilot/: README.md
VisionPilot/ROS2/: README.md
VisionPilot/ROS2/PATHFINDER/: CMakeLists.txt  README.md  package.xml
VisionPilot/ROS2/PATHFINDER/include/PATHFINDER/: path_finder.hpp  pathfinder_node.hpp
VisionPilot/ROS2/PATHFINDER/src/: path_finder.cpp  pathfinder_node.cpp
VisionPilot/ROS2/PATHFINDER/test/000001/: 1616005402699.yaml
VisionPilot/ROS2/models/: CMakeLists.txt  package.xml
VisionPilot/ROS2/models/config/: auto3d.yaml  autoseg.yaml
VisionPilot/ROS2/models/include/: run_model_node.hpp
VisionPilot/ROS2/models/launch/: auto_3d.launch.py  auto_seg.launch.py  run_pipeline.launch.py
VisionPilot/ROS2/models/src/: onnx_runtime_backend.cpp  run_model_node.cpp  tensorrt_backend.cpp
VisionPilot/ROS2/sensors/: CMakeLists.txt  package.xml
VisionPilot/ROS2/sensors/include/: video_publisher_node.hpp
VisionPilot/ROS2/sensors/src/: video_publisher_node.cpp
VisionPilot/ROS2/visualization/: CMakeLists.txt  package.xml
VisionPilot/ROS2/visualization/include/: visualize_depth_node.hpp  visualize_masks_node.hpp
VisionPilot/ROS2/visualization/launch/: visualize_depth.launch.py  visualize_domain_seg.launch.py  visualize_scene_seg.launch.py
VisionPilot/ROS2/visualization/src/: visualize_depth_node.cpp  visualize_masks_node.cpp
VisionPilot/ZENOH/AUTOSEG/: README.md
VisionPilot/ZENOH/AUTOSEG/SCENE_SEG/: CMakeLists.txt  README.md  main.cpp  video_visualization.cpp
VisionPilot/ZENOH/AUTOSEG/VIDEO_PUBSUB/: CMakeLists.txt  README.md  video_publisher.cpp  video_subscriber.cpp
VisionPilot/common/: README.md
VisionPilot/common/backends/: onnx_runtime_backend.cpp  tensorrt_backend.cpp
VisionPilot/common/include/: cuda_visualization_kernels.hpp  depth_visualization_engine.hpp  inference_backend_base.hpp  masks_visualization_engine.hpp  masks_visualization_kernels.hpp  onnx_runtime_backend.hpp  tensorrt_backend.hpp  video_publisher_engine.hpp
VisionPilot/common/sensors/: video_publisher_engine.cpp
VisionPilot/common/visualizers/: cuda_visualization_kernels.cu  depth_visualization_engine.cpp  masks_visualization_engine.cpp  masks_viz.hip.cpp
